--- a/oscp-vie2017.adoc
+++ b/oscp-vie2017.adoc
@@ -6,7 +6,7 @@ Dennis Deitermann (dennis@redhat.com), Lutz Lange (Container Security part)
 :numbered:
 :icons: font
 
-image::http://www.rhpet.de/pictures/forum_vie2017.jpg
+image::http://www.rhpet.de/pictures/forum_vie2017.jpg[Red Hat Forum 2017 - Vienna]
 
 [.lead]
 Red Hat Forum 2017 - Vienna Edition
