--- a/oscp-vie2017.adoc
+++ b/oscp-vie2017.adoc
@@ -10,8 +10,8 @@ image::http://www.rhpet.de/pictures/forum_vie2017.jpg[Red Hat Forum 2017 - Vienn
 
 == Introduction into the Lab
 
-In this Lab you will 
-You can start with the Containers and Security Lab (but you mustn´t ;-), to get sure that you don´t miss that part because of missing time.
+In this Lab you will get a first impression of the OpenShift Container Platform. You can decide to do the `Getting started with the OpenShift CLI and the Webinterface` *or* the `Containers and Security Lab`.
+Unfortunately there is too less time for both Labs.
 
 Have fun and enjoy the Lab :-)
 
