--- a/oscp-vie2017.adoc
+++ b/oscp-vie2017.adoc
@@ -1782,7 +1782,7 @@ There are multiple ways to start or create your application in OpenShift. You ca
 
 You will first create a project for you application to live in. Projects are used to separate Application Management. There can be multiple apps with the same name on the same OpenShift cluster, as long as they live in different projects. 
 
-. Create a project called "testproject" as user andrew now :
+. SSH into the `master.example.com` node and change to the user `andrew`. Create a project called "testproject" now :
 +
 ----
 [andrew@master ~]$ oc new-project testproject --description="My Test Project" --display-name="Test Project"
