--- a/oscp-vie2017.adoc
+++ b/oscp-vie2017.adoc
@@ -1864,7 +1864,7 @@ Be aware that the *Docker Container images* need to be compatible with the OpenS
     Run 'oc status' to view your app.
 ----
 +
-. Go to the OpenShift Webinterface https://master.example.com:8443[https://master.example.com:8443^] login as `andrew` with the password `r3dh4t1!`. Click on `Test Project" to see the overview Page in the Web UI. If you are quick enough, you will be able to see the following screen. Notice that there is a build in progress.
+. Go to the OpenShift Webinterface https://master.example.com:8443[https://master.example.com:8443^] login as `andrew` with the password `r3dh4t1!`. Click on `Test Project` to see the overview Page in the Web UI. If you are quick enough, you will be able to see the following screen. Notice that there is a build in progress.
 +
 image::http://people.redhat.com/~llange/labimg/TestProject-rtest1-Deploy-1.png[]
 +
@@ -1945,7 +1945,7 @@ The platform is now able to even detect internal application failure situations,
 Container Scans help you to determine known vulnerabilities in your container images. You can run Container Images scans from CloudForms. Initiate a Container Scan for your the container image of the "rtest" application. 
 
 . Sign in to your CloudForms instance link:https://cf.example.com[https://cf.example.com^]. 
-. Log in as User "admin" with the password "r3dh4t1!".
+. Log in as User `admin` with the password `r3dh4t1!`.
 . Go to : Compute -> Containers -> Container Images
 . Fill out the Search box in the upper right corner search for "rtest".
 +
